week four Oauth and bcrpyt
