# schema/adminSchema.js
@@ -17,6 +17,10 @@ const adminSchema = new mongoose.Schema({
         type: String,
         required: true,
     },
+    password: {
+        type: String,
+        required: true
+    }
 });
 
 module.exports = adminSchema;
