# schema/userSchema.js
@@ -10,6 +10,10 @@ const userSchema = new mongoose.Schema({
         required: true,
         unique: true
     },
+    password:{
+        type: String,
+        required: true,
+    },
     age:{
         type: Number,
     },
